# robotics_final_project

./: .gitignore  CMakeLists.txt  Pipfile  README.md  package.xml
launch/: configure_turtlebot.launch  empty_world.launch  laser.launch  run.launch  setup.launch  spawn_turtlebot.launch  test.launch  turtlebot3_intro_robo_manipulation.launch  turtlebot3_laser.launch
map/maze-1/: maze.pgm  maze.yaml
map/maze-2/: maze-1000.yaml  maze.pgm
models/box/: model.config  model.sdf
models/hunter/: model.config  model.sdf
models/light/: model.config  model.sdf
models/loop/: loop.mtl  model.config  model.sdf
models/maze/: maze.mtl  model.sdf
models/orb/: model.config  model.sdf
models/player/: model.config  model.sdf
models/player_light/: model.config  model.sdf
models/spotlight/: model.config  model.sdf
models/turtlebot/: model.config  model.sdf
models/wall/: model.sdf
msg/: Cell.msg  Path.msg  PathQuery.msg
paths/: path-1.yaml  path-2.yaml
plugins/: custom_shadows.cpp  lights.cpp
rviz/: laser.rviz
scripts/: a_star.py  constants.py  hallway_nav.py  light_sensor_test.py  navigate.py  player.py  sensor_nav.py  util.py
scripts/controller/: __init__.py  cmd.py  sub.py
scripts/navigation/: grid.py
scripts/perception/: __init__.py  image.py  light.py
src/blend/: maze.blend
src/blend/loop/: loop.blend
src/blend/maze/: maze.blend  maze.blend1
worlds/: tmp.sdf  turtlebot3_laser.world  turtlebot3_loop.world  turtlebot3_maze.world  turtlebot3_numbers_and_dumbbells_no_robot.world
