<package format="2">
  <name>robotics_final_project</name>

  <version>0.0.0</version>

  <description>
    Final project for CMSC 20600, Introduction to Robotics.
  </description>

  <maintainer email="sarahsebo@uchicago.edu">Sarah Sebo</maintainer>
  <maintainer email="linj24@uchicago.edu">Jason Lin</maintainer>
  <maintainer email="ahw214@uchicago.edu">Adam Weider</maintainer>
  <maintainer email="wuhua@uchicago.edu">Kailin Wu</maintainer>
  <maintainer email="hdlahlou@uchicago.edu">Hakim Lahlou</maintainer>

  <license>MIT</license>

  <export>
      <gazebo_ros gazebo_plugin_path="${prefix}/lib"/>
      <gazebo_ros gazebo_model_path="${prefix}/models"/>
      <gazebo_ros gazebo_media_path="${prefix}/media"/>
  </export>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
